--- a/package.json
+++ b/package.json
@@ -43,10 +43,19 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js, jsx,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
